class FacilityPart:
    def __init__(self, code: str, title: str):
        self.code = code
        self.title = title
        