@startuml Data design class diagram

class Address {
    + street : str
    + building_number : str
    + postal_code : int
    + city : str
    + county : str
    + country : str
}

class Corporate {
    + ICO : int
}

class Entity {
    + required : set[str]
    + get_missing_attrs() : list[Any]
    + format_attribute(name: str, value: int | str) : str
    + is_complete() : bool
    + is_missing(attr: Any) : bool
}

class Facility {
    + code : str
    + title : str
    + construction_class : str
    + format() : str
}

class FacilityPart {
    + code : str
    + title : str
}

class Person {
    + name : str
    + phone : str
    + mail : str
    + {abstract} get_full_name() : str
    + {abstract} to_string() : str
}

class PhysicalPerson {
    + title : str
    + surname : str
}

class Project {
    + id : str
    + title : str
    + construction_parcels : dict[str, dict[str, str]]
    + format_facilities() : str
}


class Statement {
    + date_time: datetime
    + template_name : str
    + create() : None
}

class Form {
    + qna : dict[str, list[str]]
    + get_question() : Question | None
    + add_answers(answers: list[str]) : None
    + next_question(answers: list[str]) : None
}

enum FormState {
    + NOT_STARTED
    + IN_PROGRESS
    + DONE
    + ABORTED
}

class MultipleChoiceQuestion {

}

class Question {
    + title : str
    + row_name : str
    + next(answer: str) : Question | None
    + are_equivalent_answers(answers: list[str]) : bool
}

class SingleChoiceQuestion {

}

Entity <|-- Address
Entity <|-- Person
Person <|-- PhysicalPerson
Person <|-- Corporate
Question <|-- SingleChoiceQuestion
Question <|-- MultipleChoiceQuestion

Facility "1" *--> "0..n" FacilityPart : "consists of"
Address "0..n" <--o "1" Person  : "has"
Project "1" *--> "0..n" Facility : "consists of"


Statement "0..n" o--> "1..n" Person : "applicants"
Statement "0..n" o--> "1..n" Person : "project owners"
Statement "1..n" o--> "1" Project : "express an opinion to"
Statement "1" o--> "1" Form : "has"

Form "1" o--> "1" Question : "current"
Form "0..n" o--> "1" FormState : "has"

Question "1..n" o--> "0..n" Question : "leads"

Entity <|-- Address
Entity <|-- Person
Person <|-- PhysicalPerson
Person <|-- Corporate
Question <|-- SingleChoiceQuestion
Question <|-- MultipleChoiceQuestion


Person "0..n" o--> "1" Address : "has"
Project "1" *--> "0..n" Facility : "consists of"


Statement "0..n" o--> "1..n" Person : "applicants"
Statement "0..n" o--> "1..n" Person : "project owners"
Statement "1..n" o--> "1" Project : "express an opinion to"
Statement "1" o--> "1" Form : "has"

Form "1" o--> "1" Question : "current"
Form "0..n" o--> "1" FormState : "has"

Question "1..n" o--> "0..n" Question : "leads"


@enduml